--- a/style.css
+++ b/style.css
@@ -10,8 +10,12 @@ main{
   color: #6CB4EE;
 }
 @keyframes mymove{
-  from{left: 340px;}
-  to{left:240px;}
+  from{left: 340px;
+  }
+  to{left:240px;
+    background: linear-gradient(to top left, rgb(101, 223, 201,0.5),rgb(255,255,255,0.7));
+    backdrop-filter: blur(2rem);
+    color: white;}
 }
 .flexbox{
   display: flex;
@@ -50,12 +54,12 @@ margin-left : 25%;
   
 }
 .intro:hover{
-  background: linear-gradient(to top left, rgb(101, 223, 201,0.5),rgb(1255,255,255,0.7));
+  background: linear-gradient(to top left, rgb(101, 223, 201,0.5),rgb(255,255,255,0.7));
   backdrop-filter: blur(2rem);
   color: white;
 }
 .bg{
-  background: linear-gradient(to top left, rgb(101, 223, 201,0.5),rgb(1255,255,255,0.7));
+  background: linear-gradient(to top left, rgb(101, 223, 201,0.5),rgb(255,255,255,0.7));
   backdrop-filter: blur(2rem);
   height: 250px;
   width: 250px;
@@ -103,9 +107,11 @@ cursor: pointer;
   color: white;
 }
 .circle:hover{
-  background: linear-gradient(to top left, rgb(101, 223, 201,0.5),rgb(1255,255,255,0.7));
+  background: linear-gradient(to top left, rgb(101, 223, 201,0.5),rgb(255,255,255,0.7));
   backdrop-filter: blur(2rem);
   color: white;
+  animation: zoom 1s linear;
+  animation-fill-mode: forwards;
 }
 @keyframes bounce{
   20%,60%,80%,to{
@@ -133,7 +139,7 @@ cursor: pointer;
   }
   to{
     transform: scale(1.3);
-   
+    
   }
 }
 
@@ -150,21 +156,38 @@ cursor: pointer;
 .card{
   margin-bottom: 20px;
   height: 100%;
+  font-family: 'Roboto',sans-serif;
 }
 .col-md-4 a{
   text-decoration: none;
   color: #6CB4EE;
 }
 
-
+.card{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.card:hover{
+  box-shadow: 0 4px 8px 0 rgb(101, 223, 201,0.2), 0 6px 20px 0 rgb(101, 223, 201,0.5);
+  transform : translateX(-12px);
+ 
+}
+.change :hover{
+ color: #65dfc9;
+}
 .card ul li a{
   text-decoration: none;
   color: #65dfc9;
+  
+}
+.card ul li a:hover{
+  text-decoration: none;
+  
 }
 .card ul li:hover{
-  background: linear-gradient(to top left, rgb(101, 223, 201,0.5),rgb(1255,255,255,0.7));
+  background: linear-gradient(to top left, rgb(101, 223, 201,0.5),rgb(255,255,255,0.7));
   backdrop-filter: blur(2rem);
   text-decoration: none;
+  
 }
 
 footer{
@@ -174,3 +197,4 @@ footer{
   text-align: center;
   padding: 2rem ;
 }
+
