--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ cursor: pointer;
 }
 
 footer{
-  background: linear-gradient(to top left, rgb(101, 223, 201,0.5),rgb(255,255,255,0.7));
+  background: linear-gradient(to bottom right, rgb(101, 223, 201,0.7),rgb(255,255,255,0.3));
   backdrop-filter: blur(2rem);
   color: white;
   text-align: center;
@@ -206,5 +206,9 @@ footer{
 
   .card{
     margin-bottom: 20px;
+  }
+  .circle{
+    margin:auto;
+    margin-top:50px;
   }
 }
