add margin to main

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ main{
   background : linear-gradient(to right top, #65dfc9, #6cdbeb);
   width: 100%;
   height: 100%;
-  padding-top:170px;
+  padding-top:10px;
   color: #6CB4EE;
 }
 @keyframes mymove{
@@ -23,10 +23,10 @@ main{
 }
 
 #introduction{
-  border: white 20px solid;
+  border: white 10px solid;
   padding: 30px;
-  margin-bottom: 50px;
- 
+  margin: 50px;
+  
 }
 .intro{
   flex:1;
@@ -51,14 +51,14 @@ main{
   backdrop-filter: blur(2rem);
   color: white;
 }
-.bg{
+.image-bg{
   background: linear-gradient(to top left, rgb(101, 223, 201,0.5),rgb(255,255,255,0.7));
   backdrop-filter: blur(2rem);
   height: 250px;
   width: 250px;
   border-radius: 10%;
 }
-.bg img{
+.image-bg img{
   flex:1;
   height: 250px;
   width: 250px;
@@ -128,7 +128,7 @@ cursor: pointer;
     
   }
   to{
-    transform: scale(1.3);
+    transform: scale(1.2);
     
   }
 }
