update margins in media query

--- a/style.css
+++ b/style.css
@@ -193,8 +193,8 @@ footer{
  #introduction{
    margin : 10px;
    padding: 10px;
-   border-left: solid white 20px;
-   border-right:solid white 20px;
+   border-left: solid white 10px;
+   border-right:solid white 10px;
  } 
  @keyframes mymove{
   from{left: 180px;
@@ -215,8 +215,6 @@ footer{
     background: linear-gradient(to bottom right, rgba(255,255,255,0.7), rgba(255,255,255,0.3));
     backdrop-filter: blur(3rem);
     border-radius: 1rem;
-    /* padding: 1rem; */
-    /* margin: auto 20px auto; */
     margin-bottom: 20px;
     animation: mymove 4s ease forwards;
   }
@@ -228,4 +226,13 @@ footer{
     margin:auto;
     margin-top:50px;
   }
+  .circle:hover{
+    background: linear-gradient(to top left, rgb(101, 223, 201,0.5),rgb(255,255,255,0.7));
+    backdrop-filter: blur(2rem);
+    color: white;
+    animation: zoom 1s linear;
+    animation-fill-mode: forwards;
+  }
+
+ 
 }
